# scepter

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  environment.yaml  install.py  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: publish.yml
asset/images/ace/: teaser.webm
asset/workflow/: sdxl_base.json  sdxl_base_mantra.json  sdxl_base_mantra_tuner.json  sdxl_base_mantra_tuner_control.json
docs/en/: index.rst
docs/en/scepter/: dataset.md  model.md  opt.md  quick_start.md  sampler.md  solvers.md  tools.md  transforms.md
docs/en/tasks/: ace.md  largen.md  scedit.md  stylebooth.md
docs/en/tutorials/: dataset.md  inference.md  train.md
docs/zh_cn/: conf.py  index.rst
docs/zh_cn/scepter/: dataset.md  model.md  opt.md  quick_start.md  sampler.md  solvers.md  tools.md  transforms.md
example/: __init__.py  example.yaml  run.py
example/classifier/: __init__.py  classifier_dataset.py
example/impls/: __init__.py
example/impls/dataset/: __init__.py
requirements/: framework.txt  recommended.txt  scepter_studio.txt
scepter/: __init__.py  version.py
scepter/methods/SCEdit/: t2i_sd15_512_sce.yaml  t2i_sd21_768_sce.yaml  t2i_sdxl_1024_sce.yaml
scepter/methods/edit/: dit_ace_0.6b_1024.yaml  dit_ace_0.6b_512.yaml  edit_512_lora.yaml
scepter/methods/studio/: scepter_ui.yaml
scepter/modules/: __init__.py
scepter/modules/annotator/: canny.py  (+28 more)
scepter/tools/: convert_tuner.py  helper.py  local.sh  process_watcher.py  run_inference.py  run_train.py  webui.py
scepter/workflow/: __init__.py  ace_plus_processor_node.py  calculator_node.py  constant.py  control_node.py  mantras_node.py  model_node.py  node_utils.py  note_node.py  parameter_node.py  pyproject.toml  tuner_node.py
scepter/workflow/config/: ace_0.6b_1024_pro.yaml  ace_0.6b_1024_refiner_pro.yaml  ace_0.6b_512_pro.yaml  ace_plus_processor.yaml  annotator.yaml  control_model.yaml  flux1.0_dev_pro.yaml  flux1.0_schnell_pro.yaml  mantra.yaml  pixart_aplha_pro.yaml  pyproject.toml  scepter_workflow.yaml  sd15_pro.yaml  sd3_pro.yaml  sdxl1.0_pro.yaml  tuner_model.yaml
tests/modules/: test_diffusion_inference.py
tests/tools/: test_annotators.py  test_convert_tuner.py  test_inference.py  test_train.py
tests/utils/: test_fs.py  test_lazy_import.py
(+360 files in other folders)
